--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "flowbite-react": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.2.4",
+    "pg": "^8.13.1",
+    "pgvector": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
