install pgadmin big clean on UI and page structure

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
