--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,6 +35,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
