--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "sequelize": "^6.37.5",
+    "socks": "^2.8.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
