--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "flowbite": "^2.5.2",
